[gd_scene load_steps=23 format=2]

[ext_resource path="res://levels/Level2_3.tmx" type="PackedScene" id=1]
[ext_resource path="res://levels/Level2_3.gd" type="Script" id=2]
[ext_resource path="res://levels/Destructible.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/Level2Block.tres" type="Texture" id=4]
[ext_resource path="res://items/Sconce.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/Door.tscn" type="PackedScene" id=6]
[ext_resource path="res://Teleport.tscn" type="PackedScene" id=7]
[ext_resource path="res://GhostSpawner.tscn" type="PackedScene" id=8]
[ext_resource path="res://enemies/BoneTower.tscn" type="PackedScene" id=9]
[ext_resource path="res://enemies/Crusher.tscn" type="PackedScene" id=10]
[ext_resource path="res://enemies/Bat.tscn" type="PackedScene" id=11]
[ext_resource path="res://SpawnArea.tscn" type="PackedScene" id=12]
[ext_resource path="res://BossArea.tscn" type="PackedScene" id=13]
[ext_resource path="res://textures/Enemies.png" type="Texture" id=14]
[ext_resource path="res://levels/EndLevelData.gd" type="Script" id=15]
[ext_resource path="res://levels/LevelSetup.gd" type="Script" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.5, 41.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 41.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 190, 53.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 80 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 51, 64.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 119.75, 8 )

[node name="Level2_3" type="Node2D"]
script = ExtResource( 2 )

[node name="Level2_3" parent="." instance=ExtResource( 1 )]
position = Vector2( 11, -432 )

[node name="SimonSpawn" type="Position2D" parent="."]
position = Vector2( 731, -80 )

[node name="Sconces" type="Node2D" parent="."]

[node name="Sconce" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 653, -71 )

[node name="Sconce11" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 656, -361 )

[node name="Sconce12" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 718, -361 )

[node name="Sconce13" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 591, -361 )

[node name="Sconce14" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 526, -361 )

[node name="Sconce15" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 463, -361 )
drop = "rosary"

[node name="Sconce16" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 399, -361 )

[node name="Sconce17" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 334, -361 )

[node name="Sconce18" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 275, -361 )

[node name="Sconce19" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 209, -350 )
drop = "bigHeart"

[node name="Sconce2" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 588, -71 )

[node name="Sconce3" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 523, -71 )

[node name="Sconce4" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 459, -71 )
drop = "holywater"

[node name="Sconce5" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 395, -71 )

[node name="Sconce6" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 331, -71 )

[node name="Sconce7" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 274, -71 )

[node name="Sconce8" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 210, -71 )

[node name="Sconce9" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 145, -71 )

[node name="Sconce10" parent="Sconces" instance=ExtResource( 5 )]
position = Vector2( 79, -97 )
drop = "bigHeart"

[node name="Destructible" parent="." instance=ExtResource( 3 )]
position = Vector2( 712, -72 )
drop = "porkchop"
texture = ExtResource( 4 )

[node name="Destructible2" parent="." instance=ExtResource( 3 )]
position = Vector2( 136, -56 )
drop = "doubleortriple"
texture = ExtResource( 4 )

[node name="Door" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -328 )
scale = Vector2( -1, 1 )

[node name="OutsideBorder" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutsideBorder"]
position = Vector2( 752.5, -217 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OutsideBorder"]
position = Vector2( 777, -102 )
shape = SubResource( 2 )

[node name="GoDown1" parent="." instance=ExtResource( 7 )]
position = Vector2( 664, -248 )
destinationNode = NodePath("../GoUp1")
newCameraY = -112

[node name="GoUp1" parent="." instance=ExtResource( 7 )]
position = Vector2( 696, -184 )
destinationNode = NodePath("../GoDown1")
newCameraY = -368
direction = 1

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 513, -176 )

[node name="LowerGhostSpawner" parent="." instance=ExtResource( 8 )]
position = Vector2( 252, -63 )

[node name="UpperGhostSpawner" parent="." instance=ExtResource( 8 )]
position = Vector2( 567, -161 )

[node name="BoneTower" parent="." instance=ExtResource( 9 )]
position = Vector2( 248, -128 )

[node name="Crusher" parent="." instance=ExtResource( 10 )]
position = Vector2( 495, -48 )
startHeight = 1.0

[node name="Crusher2" parent="." instance=ExtResource( 10 )]
position = Vector2( 430, -48 )
halfway = true

[node name="Crusher3" parent="." instance=ExtResource( 10 )]
position = Vector2( 366, -48 )
startHeight = 0.3

[node name="BoneTower2" parent="." instance=ExtResource( 9 )]
position = Vector2( 314, -160 )

[node name="Bat" parent="." instance=ExtResource( 11 )]
position = Vector2( 150, -130 )
color = "Blue"
state = 0

[node name="SpawnArea" parent="." instance=ExtResource( 12 )]
enemy = "medusahead"
minSpawnTime = 3.0
maxSpawnTime = 3.0
firstSpawnTime = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea"]
position = Vector2( 498, -375.5 )
shape = SubResource( 3 )

[node name="BossWall" type="StaticBody2D" parent="."]
position = Vector2( -237, -462 )
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossWall"]
position = Vector2( 503, 80 )
shape = SubResource( 4 )

[node name="BossArea" parent="." instance=ExtResource( 13 )]
position = Vector2( -656, -463 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BossArea"]
position = Vector2( 708, 95.5 )
shape = SubResource( 5 )

[node name="MedusaStatue" type="Sprite" parent="."]
position = Vector2( 112, -336 )
texture = ExtResource( 14 )
region_enabled = true
region_rect = Rect2( 208, 16, 32, 32 )

[node name="SnakeFloor" type="StaticBody2D" parent="."]
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SnakeFloor"]
position = Vector2( 105, -296 )
shape = SubResource( 6 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 0, -432 )

[node name="MedusaTop" type="Position2D" parent="."]
position = Vector2( 124, -346 )

[node name="MedusaBottom" type="Position2D" parent="."]
position = Vector2( 124, -295 )

[node name="CrystalSpawn" type="Position2D" parent="."]
position = Vector2( 129, -360 )

[node name="EndLevelData" type="Node" parent="."]
script = ExtResource( 15 )
crystalLocation = NodePath("../CrystalSpawn")
nextLevelNum = 3
nextLevel = "res://levels/Level3_1.tscn"

[node name="LevelSetup" type="Node" parent="."]
script = ExtResource( 16 )
faceRight = false
music = "res://music/03 Stalker.mp3"
stage = 5
cameraPosition = Vector2( 512, -176 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 645, -176 )

[connection signal="teleported" from="GoUp1" to="." method="_on_GoUp1_teleported"]
[connection signal="body_entered" from="BossArea" to="." method="_on_BossArea_body_entered"]
[connection signal="bossReady" from="BossArea" to="." method="_on_BossArea_bossReady" flags=6]
